Update fitur/bugfix/deskripsi perubahan

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     "recharts": "https://esm.sh/recharts@^3.0.2",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "html2canvas": "https://esm.sh/html2canvas@1.4.1",
-    "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2"
+    "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2"
   }
 }
 </script>
